  field on its own. Samples as well as the GT field are defined as Structured.
- Removed gloptimization - too small of a benefit for non-standard code
- Change all data types to be fully recursive starting at TOPLEVEL, removing data-type specific reconstruction loop
- Added caching of Structured in PIZ
- Better BD and BI compression for SAM
- Not backward compatible
- Bug fixes

7.0.1
- bug fixes
- new --test-seg debug option
- change default number of threads to 1.4 * number of cores

7.0.2
- Even better SAM BD/BI codec

7.0.3
- Bug fixes

7.0.4
- Bug fixes

7.0.5
- Add --show-stats and --SHOW-STATS to genocat/genounzip by introducing a new section SEC_STATS ; remove limitation of only one file when -w or -W

8.0.0
- Added libbsc codec
- Dynamic selection of codec between lzma, bz2, bsc for each local and b250 buffer
- --show-ref-seq can now work in combination with --regions in genocat/genounzip
- Better license registration flow
- Consume ~0.5GB (for human data) less RAM in genounzip of SAM files compressed without a reference 
- In --regions, allow specification or ranges using length eg "chr22:1000+151" - equivalent to "chr22:1000-1150"
- Canceled optimize-SEQ (benefits were tiny if any, but it slowed down --optimize considerably)
- Added --best to contrast --fast. --best doesn't have any additional effect as its the default mode of genozip.
- Added =prefix option to --unbind, to add a prefix when unbinding
- --reference in genounzip is now optional - will use original reference filename absent --reference
- Not backward compatible

8.0.2
- Bug fixes
- Improved 'genocat --show-headers'

8.0.3
- Support samtools with or without --no-PG
- Fix reading and writing BAM files using samtools
- Fix bug in genocat --show-headers
- Add back gtshark as a codec for VCF allele data, --gtshark option

8.0.4
- 10X improvement in --gtshark speed by moving to in-memory comms using fifo