@@ -213,3 +213,4 @@ Note: some versions numbers are skipped due to failed conda builds (every build 
 
 8.0.4
 - 10X improvement in --gtshark speed by moving to in-memory comms using fifo
+- fix thread safety issue in bit_array.c 
